--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           <ul class="toDoList">
           </ul>
         </div>
+        <div class="share-button-container">
+          <button class="share-button">Compartir en WhatsApp</button>
+        </div>
+
       </section>
       <script src="./script.js"></script>
 </body>
